add file downloading

--- a/system_przesylania_projektow/system_przesylania_projektow.Application/system_przesylania_projektow.Application.csproj
+++ b/system_przesylania_projektow/system_przesylania_projektow.Application/system_przesylania_projektow.Application.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\system_przesylania_projektow.Shared\system_przesylania_projektow.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Requests\SolutionRequests\DownloadAllSoludtions\" />
+  </ItemGroup>
+
 </Project>
